--- a/day12/instagram/article/templates/index.html
+++ b/day12/instagram/article/templates/index.html
@@ -27,7 +27,7 @@
                           <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
                         </div>
                         <div class="custom-file">
-                          <input name="image" type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+                          <input name="image" type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" multiple>
                           <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
                         </div>
                     </div>
@@ -45,33 +45,21 @@
     {% for article in articles %}
     <div class="row mt-4">
         <div class="card col-12">
-            {% if article.image_resized  %}
-            <!-- <img src="{{article.image_thumbnail.url}}" alt="car.png" class="card-img-top" > -->
+            {% if article.article_images %}
+            
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
+                <!-- <ol class="carousel-indicators">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
+                </ol> -->
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="{{article.image_thumbnail.url}}" class="d-block w-100" alt="...">
-                  </div>
+                  {% for image in article.article_images %}
                   <div class="carousel-item">
-                    <img src="{{article.image_thumbnail.url}}" class="d-block w-100" alt="...">
+                    <img src="{{image.image_thumbnail.url}}" class="d-block w-100" alt="...">
                   </div>
-                  <div class="carousel-item">
-                    <img src="{{article.image_thumbnail.url}}" class="d-block w-100" alt="...">
-                  </div>
+                  {% endfor %}
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
             </div>
 
             <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
