--- a/day15/instagram/article/templates/empty.html
+++ b/day15/instagram/article/templates/empty.html
@@ -1,9 +1,9 @@
 
 
 <li class="list-group-item" id="board-{{board.id}}">
-    {{board.contents}}
+    <span class="boardItem">{{board.contents}}</span>
     <span class="float-right">
-        <button type="button" class="btn btn-danger deleteBoard" data-id="{{board.id}}">삭제</button>
-        <button type="button" class="btn btn-warning">수정</button>
+            <button type="button" class="btn btn-danger deleteBoard" data-id="{{board.id}}">삭제</button>
+            <button type="button" class="btn btn-warning editBoard" data-id="{{board.id}}">수정</button>
     </span>
 </li>
