JS + jQuery + AJAX

--- a/day15/instagram/article/templates/index.html
+++ b/day15/instagram/article/templates/index.html
@@ -127,3 +127,14 @@
 </div>
 
 {% endblock %}
+
+{% block script %}
+
+<script>
+    $(function(){
+        alert('Hi');
+    })
+
+</script>
+
+{% endblock %}
