--- a/day15/instagram/article/templates/index.html
+++ b/day15/instagram/article/templates/index.html
@@ -24,11 +24,11 @@
                     <!-- img input tag -->
                     <div class="input-group mt-2">
                         <div class="input-group-prepend">
-                          <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+                            <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
                         </div>
                         <div class="custom-file">
-                          <input name="image" type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" multiple>
-                          <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                            <input name="image" type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" multiple>
+                            <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
                         </div>
                     </div>
 
@@ -54,11 +54,11 @@
                   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 </ol> -->
                 <div class="carousel-inner">
-                  {% for image in article.article_images %}
-                  <div class="carousel-item">
-                    <img src="{{image.image_thumbnail.url}}" class="d-block w-100" alt="...">
-                  </div>
-                  {% endfor %}
+                    {% for image in article.article_images %}
+                    <div class="carousel-item">
+                        <img src="{{image.image_thumbnail.url}}" class="d-block w-100" alt="...">
+                    </div>
+                    {% endfor %}
                 </div>
             </div>
 
@@ -90,19 +90,22 @@
                 <p class="card-text">{{article.contents}}</p>
                 
                 <span class="float-right">
-                    <a href="{% url 'edit' article.id %}" class="btn btn-warning"><i class="fas fa-edit"></i></a>
-                    <a href="{% url 'delete' article.id %}" class="btn btn-danger"><i class="fas fa-trash-alt"></i></a>
+                    <a href="{% url 'edit' article.id %}" class="btn btn-warning text-white deleteComment"><i class="fas fa-edit"></i></a>
+                    <a href="{% url 'edit' article.id %}" class="btn btn-danger textwhite editComment"><i class="fas fa-trash-alt"></i></a>
                 </span>
             
             </div>
-            <ul class="list-group list-group-flush">
+            <ul class="list-group list-group-flush" id="comment-list-group-{{article.id}}">
                 <li class="list-group-item">
-                    <form action="{% url 'comments' %}" method="POST">
+
+                    <form action="{% url 'comments' %}" method="POST" class="commentForm" id="commentForm-{{article.id}}">
                         <input type="hidden" name="csrfmiddlewaretoken" value="{{csrf_token}}">
-                        <input type="hidden" name="article_id" value="{{article.id}}">
+                        <input type="hidden" class="articleId" name="article_id" value="{{article.id}}">
+                        <input type="hidden" class="formMethod" name="form_method" value="create">
+                        <input type="hidden" class="commentId" name="comment_id" >
                         <div class="row">
                             <div class="col-9">
-                                <input type="text" class="form-control" name="contents">
+                                <input type="text" class="form-control commentInput" name="contents">
                             </div>
                             <div class="col-3 text-center">
                                 <input type="submit" class="btn btn-primary" value="댓글">
@@ -111,12 +114,12 @@
                     </form>
                 </li>
                 {% for comment in article.comments %}
-                <li class="list-group-item">
+                <li class="list-group-item" id="comment-{{comment.id}}">
                     <i class="fas fa-comment-dots"></i>
-                    {{comment.contents}}
+                    <span class="contents">{{comment.contents}}</span>
                     <span class="float-right">
-                        <a href="{% url 'edit_comment' comment.id %}" class="btn btn-warning"><i class="fas fa-edit"></i></a>
-                        <a href="{% url 'delete_comment' comment.id %}" class="btn btn-danger"><i class="fas fa-trash-alt"></i></a>
+                        <button data-contents="{{comment.contents}}" data-article-id="{{article.id}}" data-id="{{comment.id}}" class="btn btn-warning editComment"><i class="fas fa-edit"></i></button>
+                        <button data-id="{{comment.id}}" class="btn btn-danger deleteComment"><i class="fas fa-trash-alt"></i></button>
                     </span>
                 </li>
                 {% endfor %}
@@ -132,7 +135,125 @@
 
 <script>
     $(function(){
-        alert('Hi');
+        // alert('Hi');
+    
+        // create comment
+        // form으로부터 내용을 받아서 코멘트 작성(DB에 반영)
+            // article별로 있는 form으로부터
+            // submit이라는 이벤트에
+        $('.commentForm').on('submit', function(e){
+            e.preventDefault();
+
+            // 해당 form에 있는 input중에서 텍스트를 입력한 input으로부터 내용을 받아서 
+            // var contents = $(this).find('input.commentInput').val();
+            console.log($(this).serialize());
+            // serialize : input값과 모든 input값의 내용을 출력
+            var data = $(this).serialize();
+            $(this).find('input.commentInput').val(' ');
+            // return;
+
+            // input 태그중에 commentForm있는 것을 찾는다, find: 현재 있는 form의 자식이 있는지 css selector
+            
+            // 어떤 article에 대한 댓글인지 알아야함
+            // var id = $(this).find('input.articleId').val();
+            // var method = $(this).find('input.formMethod').val();
+            
+
+            // create comment 역할을 하는 url로 요청을 보낸다
+            $.ajax({
+                url: '{% url "comments" %}',
+                method: 'POST',
+                data: data,
+                // {
+                //     contents: contents,
+                //     method: method,
+                //     article_id: id,
+                //     csrfmiddlewaretoken: '{{csrf_token}}'
+                // },
+
+                // 정상적인 callback이 오면 위에서 받아둔 텍스트를 바탕으로
+                success: function(data){
+                    if(data.method == "edit"){
+                        $('#commentForm-' + data.article_id + ' .formMethod').val("create");
+                        $('#comment-' + data.comment_id + ' .contents').text(data.comment);
+                        $('#comment-' + data.comment_id + ' .editComment').data('contents', data.comment);
+                    }else {
+                        var comment = `
+                        <li class="list-group-item" id="comment-${data.comment_id}">
+                            <i class="fas fa-comment-dots"></i>
+                            <span class="contents">${data.comment}</span>
+                            <span class="float-right">
+                                <button data-contents="${data.comment}" data-article-id="${data.article_id}" data-id="${data.comment_id}"" class="btn btn-warning editComment"><i class="fas fa-edit"></i></button>
+                                <button data-id="${data.comment_id}" class="btn btn-danger deleteComment"><i class="fas fa-trash-alt"></i></button>
+                            </span>
+                        </li>
+                        `
+                        // 새로운 댓글 element를 추가한다.
+                        $('#comment-list-group-' + data.article_id).append(comment);
+                    }
+                },
+                error: function(data){
+                    console.log("실패");
+                }
+            })
+
+        }) 
+
+        // delete comment
+        // 삭제 버튼을 누르면 해당 element가 삭제된다
+            // 삭제 버튼을 찾는다
+            $(document).on('click', '.deleteComment', function(e){
+                // 삭제 버튼에 click 이벤트를 준다(리스너와 핸들러)
+                // e.preventDefault();
+                console.log("click");
+
+                // 해당 element가 가지고 있는 유일한 값을 통해
+                console.log($(this).data());
+                var comment_id = $(this).data('id');
+                
+                // id를 가지고 DB에서 삭제될 수 있도록 서버에 요청
+                $.ajax({
+                    // url: '/insta/comments/' + comment_id + '/delete',
+                    url: '{% url "delete_comment" %}',
+                    method: 'POST',
+                    data: {
+                        comment_id: comment_id,
+                        csrfmiddlewaretoken: "{{csrf_token}}"
+                    },
+                    success: function(data){
+                        console.log("삭제 성공");
+                        // 요청이 정상적으로 처리되면 해당 element 삭제
+                        $('#comment-' + comment_id).remove();
+                    },
+                    error: function(data){
+                        console.log("실패");
+                    }
+                })
+            })
+
+
+        // update comment
+        // 기존에 있던 내용을 해당 댓글을 다는 form으로 이동시켜
+        // 내용을 바꾸고 실제로 DB에 반영한다.
+
+            // edit 버튼을 누르면(event1)
+            $(document).on('click', '.editComment', function(){
+                console.log("edit");
+                // 해당 댓글이 가지고 있던 내용을
+                var contents = $(this).data("contents");
+                console.log(contents);
+                // 입력창으로 이동시키고
+                var article_id = $(this).data("article-id");
+                var comment_id = $(this).data("id");
+                $('#commentForm-' + article_id + ' .commentInput').val(contents);
+                $('#commentForm-' + article_id + ' .formMethod').val("edit");
+                $('#commentForm-' + article_id + ' .commentId').val(comment_id);
+            })
+            
+
+            // 바뀐내용을 submit하면(event2)
+            // 실제 서버에 반영시키고
+            // 바뀐 내용으로 해당 댓글을 변경
     })
 
 </script>
