--- a/day19/board/templates/board/article_list.html
+++ b/day19/board/templates/board/article_list.html
@@ -5,7 +5,11 @@
 <h1>Article list</h1>
 <ul>
 {% for article in articles %}
-    <li>{{ article.title }}</li>
+    <li>
+        <a href="{% url 'board:article_detail' article.id %}">
+            {{ article.title }}
+        </a>
+    </li>
 {% endfor %}
 </ul>
 
