--- a/day19/board/templates/board/base.html
+++ b/day19/board/templates/board/base.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     {% block style %}
     {% endblock %}
     <title>Document</title>
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
-
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
+    
     {% block script %}
     {% endblock %}
 </body>
