--- a/day19/board/templates/board/article_list.html
+++ b/day19/board/templates/board/article_list.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <h1>Article list</h1>
+<h2><a href="{% url 'board:new_article' %}">New Article</a></h2>
 <ul>
 {% for article in articles %}
     <li>
